@@ -3,6 +3,11 @@ Version 0.5.4
 
 * Actually use the `text` and `graphics` in `new_output_handler`
 
+* Multiple expressions separated by `;` on the same line can be printed as
+  expected when the result returned is visible, e.g. both `x` and `y` will
+  be printed when the source code is `x; y`. In previous versions, only `y`
+  is printed. (thanks, Bill Venables)
+
 Version 0.5.3
 ------------------------------------------------------------------------------
 
